Fixing customization checkboxes layout on mobile

--- a/src/style.css
+++ b/src/style.css
@@ -192,6 +192,7 @@ h2 {
 /* ---------------------------
    Smartphone: fino a 480px
    --------------------------- */
+   
 @media (max-width: 480px) {
   h1 {
     font-size: 36px;
@@ -219,10 +220,22 @@ h2 {
     gap: 10px;
   }
 
-  .chars-range-wrapper,
-  .checkboxes-wrapper {
+  .chars-range-wrapper {
     padding: 10px 0;
   }
+
+  .checkboxes-wrapper {
+    display: grid;
+    grid-template-columns: repeat(2, auto);
+    column-gap: 10px;
+    row-gap: 10px;
+    align-items: center;
+    justify-content: center;
+    padding: 10px 0;
+  }
+
+  .checkboxes-wrapper .checkboxes,
+  .checkboxes-wrapper label {
+    margin: 0;
+  }
 }
-
-
